# cmake_spdlog_example

./: .gitignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  TraceLoggingProvider.wprp  build.bat  start_rec.bat  stop_rec.bat
cmake/: CompilerWarnings.cmake
src/: CMakeLists.txt  logger.h  main.cpp  version.h.in
src/exe/: CMakeLists.txt
src/lib/: CMakeLists.txt  hello_lib.cpp  hello_lib.h
