########################################################################################################################
# Main exec
########################################################################################################################
add_executable(main main.cpp logger.h)
target_link_libraries(main PRIVATE spdlog)
