########################################################################################################################
# Main exec
########################################################################################################################

configure_file(version.h.in version.h)

add_subdirectory(lib)
add_subdirectory(exe)
